src/main/resources/template/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo-svc
  namespace: kong-dbless
spec:
  type: NodePort
  ports:
    - port: 80
      name: low
      protocol: TCP
      targetPort: 8080
    - port: 8080
      name: high
      protocol: TCP
      targetPort: 8080
      nodePort: 31316
  selector:
    app: echo
