src/main/resources/template/vts-kit-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __INGRESSNAME__
  namespace: __NAMESPACE__
  annotations:
#    konghq.com/plugins: __PLUGINNAME__
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: __ROUTE__
            pathType: ImplementationSpecific
            backend:
              service:
                name: __SERVICENAME__
                port:
                  number: __PORT__
